--- a/index.html
+++ b/index.html
@@ -14,10 +14,28 @@
       <li>Fork základního projektu pro možnost editace</li>
       <li>Propojení projektu na GH do nového Repozitáře</li>
       <li>
-        L ink na nově vytvořený
+        Link na nově vytvořený
         <a title="Odkaz na github.com" href="https://github.com/josefmuck/TWW-">
           Repozitář</a
         >
+      </li>
+    </ul>
+    <h2>Publikace projektu na GH Pages</h2>
+    <ul>
+      <li>
+        V
+        <a title="Odkaz na github.com" href="https://github.com/josefmuck/TWW-">
+          repozitáři</a
+        >
+        kliknou na ... a následně Seting
+      </li>
+      <li>Vybrat Pages</li>
+      <li>Vybrat větev master místo none</li>
+      <li>
+        Zobrazí se na vebu
+        <a title="Odkaz na github.com" href="https://josefmuck.github.io/TWW-/">
+          https://josefmuck.github.io/TWW-/
+        </a>
       </li>
     </ul>
   </body>
