--- a/index.html
+++ b/index.html
@@ -38,5 +38,8 @@
         </a>
       </li>
     </ul>
+    <footer>
+      <a href="about.html" title="O projektu">O projektu</a>
+    </footer>
   </body>
 </html>
